KSCM-2111: Fixed required indicator wrapping on labels with (i) icons.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69486 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -343,6 +343,11 @@ section.uif-disclosure .uif-headerText .uif-headerText-span [class*='icon-caret-
     margin-right: 5px;
 }
 
+ /* Makes the required indicator in Uif-KS-IconLabelMessage aka labels which contain an (i) icon not wrap. */
+label > div.uif-message {
+  display: inline;
+}
+
 /* Review section styling */
 
 /* Float the required indicator message to the left side of the label */
